CSSとJSファイルの用意

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -2,9 +2,14 @@
     <head>
         <title>iOSスクロール実験</title>
         <meta charset="utf-8" />
+
+        <link rel="stylesheet" href="./css/style.css" />
     </head>
-    
+
     <body>
-        <h1>Test</h1>
+        <h1 class="title">Test</h1>
+
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
