--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,12 +4,15 @@
         <meta charset="utf-8" />
 
         <link rel="stylesheet" href="./css/style.css" />
-
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="./js/main.js"></script>
     </head>
 
     <body>
-        <h1 class="title">Test</h1>
+        <div id="app">
+            <h1 class="title">{{ title }}</h1>
+        </div>
     </body>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+    <script src="./js/main.js"></script>
 </html>
