--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -9,9 +9,8 @@
     <body>
         <div id="app">
             <h1 class="title">{{ title }}</h1>
-            <button class="add-button" @click="addData">データ追加</button>
             <div class="table-wrap">
-                <table class="data-table" border="1">
+                <table class="data-table scrollable" border="1">
                     <thead>
                         <tr>
                             <th>ID</th><th>Message</th>
@@ -23,7 +22,12 @@
                             <td>{{ item.msg }}</td>
                         </tr>
                     </tbody>
-                </table>    
+                </table>
+            </div>
+            <div class="message-area scrollable">
+                <div class="message" v-for="item in datas" :key="item.id">
+                    {{ item.msg }}
+                </div>
             </div>
         </div>
     </body>
@@ -31,4 +35,5 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/scrollable.js"></script>
 </html>
