--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -9,8 +9,8 @@
     <body>
         <div id="app">
             <h1 class="title">{{ title }}</h1>
-            <div class="table-wrap">
-                <table class="data-table scrollable" border="1">
+            <div class="table-wrap scrollable">
+                <table class="data-table" border="1">
                     <thead>
                         <tr>
                             <th>ID</th><th>Message</th>
